--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ regex = "0.2"
 termion = "*"
 num = "0.1.41"
 float-cmp = "0.3.0"
+csv = "1.0.0-beta.5"
+serde = "1"
+serde_derive = "1"
+geo = "0.7.1"
