--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["multimedia::images", "visualization", "data-structures"]
 
 [dependencies]
 regex = "0.2"
-termion = "*"
+termion = "1"
 num = "0.1.41"
 float-cmp = "0.3.0"
 csv = "1.0.0-beta.5"
