Trying to fix thorny docs.rs error

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,4 @@ maplit = "1.0.1"
 lazy_static = "1.0"
 
 [package.metadata.docs.rs]
-rustdoc-args = ["--html-after-content colorize.html"]
+rustdoc-args = ["--html-after-content", "colorize.html"]
