--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "scarlet"
 description = "Colors and color spaces made simple"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
 license = "Apache-2.0"
 readme = "README.MD"
@@ -24,4 +24,4 @@ maplit = "1.0.1"
 lazy_static = "1.0"
 
 [package.metadata.docs.rs]
-rustdoc-args = ["--html-after-content", "colorize.html"]
+rustdoc-args = ["--html-after-content", ".cargo/registry/src/github.com-1ecc6299db9ec823/scarlet-0.2.2/colorize.html"]
