--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ csv = "1.0.0-beta.5"
 serde = "1"
 serde_derive = "1"
 geo = "0.7.1"
-nalgebra = "0.14"
+rulinalg="0.4.2"
 maplit = "1.0.1"
 lazy_static = "1.0"
 
