Made some final overhauls for 1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "scarlet"
 description = "Colors and color spaces made simple"
-version = "0.2.2"
+version = "1.0.0"
 authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
 license = "Apache-2.0"
 readme = "README.MD"
@@ -11,17 +11,17 @@ categories = ["multimedia::images", "visualization", "data-structures"]
 
 
 [dependencies]
-regex = "0.2"
-termion = "1"
-num = "0.1.41"
+regex = "1.0"
+termion = "1.5"
+num = "0.2"
 float-cmp = "0.4.0"
-csv = "1.0.0-beta.5"
+csv = "1.0.2"
 serde = "1"
 serde_derive = "1"
-geo = "0.7.1"
+geo = "0.10"
 rulinalg="0.4.2"
 maplit = "1.0.1"
-lazy_static = "1.0"
+lazy_static = "1.1"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--html-after-content", ".cargo/registry/src/github.com-1ecc6299db9ec823/scarlet-0.2.2/colorize.html"]
