--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.MD"
 repository = "https://github.com/nicholas-miklaucic/scarlet"
 keywords = ["color", "rgb", "image", "visualization"]
 categories = ["multimedia::images", "visualization", "data-structures"]
-
+rustdoc-args = ["--html-after-content", "https://raw.githubusercontent.com/nicholas-miklaucic/scarlet/master/colorize.html"]
 
 [dependencies]
 regex = "1.0"
@@ -24,4 +24,4 @@ maplit = "1.0.1"
 lazy_static = "1.1"
 
 [package.metadata.docs.rs]
-rustdoc-args = ["--html-after-content", ".cargo/registry/src/github.com-1ecc6299db9ec823/scarlet-0.2.2/colorize.html"]
+rustdoc-args = ["--html-after-content", "https://raw.githubusercontent.com/nicholas-miklaucic/scarlet/master/colorize.html"]
