--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ csv = "1.1.5"
 serde = "1.0.120"
 serde_derive = "1.0.120"
 geo = "0.17.0"
-rulinalg = "0.4.2"
 maplit = "1.0.2"
 lazy_static = "1.4.0"
+nalgebra = "0.32.2"
 termion = { version = "1.5.5", optional = true }
